fix whitespace

--- a/src/styles.css
+++ b/src/styles.css
@@ -366,7 +366,7 @@ body {
 }
 
 .dad-joke__title {
-
+  white-space: pre-line;
 }
 
 .dad-joke__title > span:not(.loading) {
